--- a/src/RPC/.deps/RPCMethods.Po
+++ b/src/RPC/.deps/RPCMethods.Po
@@ -315,6 +315,8 @@ RPC/RPCMethods.o: RPC/RPCMethods.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -331,6 +333,7 @@ RPC/RPCMethods.o: RPC/RPCMethods.cpp /usr/include/stdc-predef.h \
  /usr/include/x86_64-linux-gnu/sys/stat.h \
  /usr/include/x86_64-linux-gnu/sys/un.h RPC/../GD/../CLI/CLIClient.h \
  RPC/../GD/../Events/EventHandler.h \
+ RPC/../GD/../Licensing/LicensingController.h \
  RPC/../GD/../Systems/FamilyController.h \
  RPC/../GD/../Systems/PhysicalInterfaces.h \
  RPC/../GD/../Systems/DatabaseController.h \
@@ -1117,6 +1120,10 @@ RPC/RPCServer.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1170,6 +1177,8 @@ RPC/../GD/../CLI/../Systems/FamilyController.h:
 RPC/../GD/../CLI/CLIClient.h:
 
 RPC/../GD/../Events/EventHandler.h:
+
+RPC/../GD/../Licensing/LicensingController.h:
 
 RPC/../GD/../Systems/FamilyController.h:
 
