--- a/src/ScriptEngine/.deps/libscriptengine_a-PhpVariableConverter.Po
+++ b/src/ScriptEngine/.deps/libscriptengine_a-PhpVariableConverter.Po
@@ -319,6 +319,8 @@ ScriptEngine/libscriptengine_a-PhpVariableConverter.o: \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -340,6 +342,7 @@ ScriptEngine/libscriptengine_a-PhpVariableConverter.o: \
  ScriptEngine/../GD/../Events/../RPC/Webserver.h \
  ScriptEngine/../GD/../Events/../RPC/RPCMethods.h \
  ScriptEngine/../GD/../Events/../RPC/../Events/EventHandler.h \
+ ScriptEngine/../GD/../Licensing/LicensingController.h \
  ScriptEngine/../GD/../Systems/FamilyController.h \
  ScriptEngine/../GD/../Systems/PhysicalInterfaces.h \
  ScriptEngine/../GD/../Systems/DatabaseController.h \
@@ -1181,6 +1184,10 @@ ScriptEngine/../GD/../ScriptEngine/php_config_fixes.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1226,6 +1233,8 @@ ScriptEngine/../GD/../Events/../RPC/Webserver.h:
 ScriptEngine/../GD/../Events/../RPC/RPCMethods.h:
 
 ScriptEngine/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+ScriptEngine/../GD/../Licensing/LicensingController.h:
 
 ScriptEngine/../GD/../Systems/FamilyController.h:
 
