--- a/src/Systems/.deps/DatabaseController.Po
+++ b/src/Systems/.deps/DatabaseController.Po
@@ -322,6 +322,8 @@ Systems/DatabaseController.o: Systems/DatabaseController.cpp \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -341,6 +343,7 @@ Systems/DatabaseController.o: Systems/DatabaseController.cpp \
  Systems/../GD/../Events/../RPC/Webserver.h \
  Systems/../GD/../Events/../RPC/RPCMethods.h \
  Systems/../GD/../Events/../RPC/../Events/EventHandler.h \
+ Systems/../GD/../Licensing/LicensingController.h \
  Systems/../GD/../Systems/FamilyController.h \
  Systems/../GD/../Systems/PhysicalInterfaces.h \
  Systems/../GD/../Systems/DatabaseController.h \
@@ -1140,6 +1143,10 @@ Systems/../GD/../ScriptEngine/php_config_fixes.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1185,6 +1192,8 @@ Systems/../GD/../Events/../RPC/Webserver.h:
 Systems/../GD/../Events/../RPC/RPCMethods.h:
 
 Systems/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+Systems/../GD/../Licensing/LicensingController.h:
 
 Systems/../GD/../Systems/FamilyController.h:
 
