--- a/src/CLI/.deps/CLIServer.Po
+++ b/src/CLI/.deps/CLIServer.Po
@@ -315,6 +315,8 @@ CLI/CLIServer.o: CLI/CLIServer.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -334,6 +336,7 @@ CLI/CLIServer.o: CLI/CLIServer.cpp /usr/include/stdc-predef.h \
  CLI/../GD/../Events/../RPC/Webserver.h \
  CLI/../GD/../Events/../RPC/RPCMethods.h \
  CLI/../GD/../Events/../RPC/../Events/EventHandler.h \
+ CLI/../GD/../Licensing/LicensingController.h \
  CLI/../GD/../Systems/FamilyController.h \
  CLI/../GD/../Systems/PhysicalInterfaces.h \
  CLI/../GD/../Systems/DatabaseController.h \
@@ -1118,6 +1121,10 @@ CLI/CLIServer.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1171,6 +1178,8 @@ CLI/../GD/../Events/../RPC/Webserver.h:
 CLI/../GD/../Events/../RPC/RPCMethods.h:
 
 CLI/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+CLI/../GD/../Licensing/LicensingController.h:
 
 CLI/../GD/../Systems/FamilyController.h:
 
