--- a/src/Events/.deps/EventHandler.Po
+++ b/src/Events/.deps/EventHandler.Po
@@ -316,6 +316,8 @@ Events/EventHandler.o: Events/EventHandler.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -332,6 +334,7 @@ Events/EventHandler.o: Events/EventHandler.cpp /usr/include/stdc-predef.h \
  /usr/include/x86_64-linux-gnu/sys/stat.h \
  /usr/include/x86_64-linux-gnu/sys/un.h Events/../GD/../CLI/CLIClient.h \
  Events/../GD/../Events/EventHandler.h \
+ Events/../GD/../Licensing/LicensingController.h \
  Events/../GD/../Systems/FamilyController.h \
  Events/../GD/../Systems/PhysicalInterfaces.h \
  Events/../GD/../Systems/DatabaseController.h \
@@ -1118,6 +1121,10 @@ Events/../../config.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1169,6 +1176,8 @@ Events/../GD/../CLI/../Systems/FamilyController.h:
 Events/../GD/../CLI/CLIClient.h:
 
 Events/../GD/../Events/EventHandler.h:
+
+Events/../GD/../Licensing/LicensingController.h:
 
 Events/../GD/../Systems/FamilyController.h:
 
