--- a/src/MQTT/.deps/MqttSettings.Po
+++ b/src/MQTT/.deps/MqttSettings.Po
@@ -318,6 +318,8 @@ MQTT/MqttSettings.o: MQTT/MqttSettings.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -336,6 +338,7 @@ MQTT/MqttSettings.o: MQTT/MqttSettings.cpp /usr/include/stdc-predef.h \
  MQTT/../GD/../Events/../RPC/Webserver.h \
  MQTT/../GD/../Events/../RPC/RPCMethods.h \
  MQTT/../GD/../Events/../RPC/../Events/EventHandler.h \
+ MQTT/../GD/../Licensing/LicensingController.h \
  MQTT/../GD/../Systems/FamilyController.h \
  MQTT/../GD/../Systems/PhysicalInterfaces.h \
  MQTT/../GD/../Systems/DatabaseController.h \
@@ -1126,6 +1129,10 @@ MQTT/../GD/../ScriptEngine/php_config_fixes.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1171,6 +1178,8 @@ MQTT/../GD/../Events/../RPC/Webserver.h:
 MQTT/../GD/../Events/../RPC/RPCMethods.h:
 
 MQTT/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+MQTT/../GD/../Licensing/LicensingController.h:
 
 MQTT/../GD/../Systems/FamilyController.h:
 
