--- a/src/RPC/.deps/ClientSettings.Po
+++ b/src/RPC/.deps/ClientSettings.Po
@@ -315,6 +315,8 @@ RPC/ClientSettings.o: RPC/ClientSettings.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -334,6 +336,7 @@ RPC/ClientSettings.o: RPC/ClientSettings.cpp /usr/include/stdc-predef.h \
  RPC/../GD/../Events/../RPC/Webserver.h \
  RPC/../GD/../Events/../RPC/RPCMethods.h \
  RPC/../GD/../Events/../RPC/../Events/EventHandler.h \
+ RPC/../GD/../Licensing/LicensingController.h \
  RPC/../GD/../Systems/FamilyController.h \
  RPC/../GD/../Systems/PhysicalInterfaces.h \
  RPC/../GD/../Systems/DatabaseController.h \
@@ -1118,6 +1121,10 @@ RPC/ClientSettings.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1171,6 +1178,8 @@ RPC/../GD/../Events/../RPC/Webserver.h:
 RPC/../GD/../Events/../RPC/RPCMethods.h:
 
 RPC/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+RPC/../GD/../Licensing/LicensingController.h:
 
 RPC/../GD/../Systems/FamilyController.h:
 
