--- a/src/RPC/.deps/RPCServer.Po
+++ b/src/RPC/.deps/RPCServer.Po
@@ -315,6 +315,8 @@ RPC/RPCServer.o: RPC/RPCServer.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -333,6 +335,7 @@ RPC/RPCServer.o: RPC/RPCServer.cpp /usr/include/stdc-predef.h \
  RPC/../GD/../Events/../RPC/RPCMethods.h \
  RPC/../GD/../Events/../RPC/RPCMethod.h \
  RPC/../GD/../Events/../RPC/../Events/EventHandler.h \
+ RPC/../GD/../Licensing/LicensingController.h \
  RPC/../GD/../Systems/FamilyController.h \
  RPC/../GD/../Systems/PhysicalInterfaces.h \
  RPC/../GD/../Systems/DatabaseController.h \
@@ -1117,6 +1120,10 @@ RPC/RPCServer.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1172,6 +1179,8 @@ RPC/../GD/../Events/../RPC/RPCMethods.h:
 RPC/../GD/../Events/../RPC/RPCMethod.h:
 
 RPC/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+RPC/../GD/../Licensing/LicensingController.h:
 
 RPC/../GD/../Systems/FamilyController.h:
 
