--- a/src/RPC/.deps/RpcClient.Po
+++ b/src/RPC/.deps/RpcClient.Po
@@ -316,6 +316,8 @@ RPC/RpcClient.o: RPC/RpcClient.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Threads/Threads.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/Output/Output.h \
+ /usr/include/homegear-base/Licensing/LicensingFactory.h \
+ /usr/include/homegear-base/Licensing/Licensing.h \
  /usr/include/homegear-base/SSDP/SSDP.h \
  /usr/include/homegear-base/Encoding/HTTP.h \
  /usr/include/homegear-base/Variable.h \
@@ -335,6 +337,7 @@ RPC/RpcClient.o: RPC/RpcClient.cpp /usr/include/stdc-predef.h \
  RPC/../GD/../Events/../RPC/Webserver.h \
  RPC/../GD/../Events/../RPC/RPCMethods.h \
  RPC/../GD/../Events/../RPC/../Events/EventHandler.h \
+ RPC/../GD/../Licensing/LicensingController.h \
  RPC/../GD/../Systems/FamilyController.h \
  RPC/../GD/../Systems/PhysicalInterfaces.h \
  RPC/../GD/../Systems/DatabaseController.h \
@@ -1119,6 +1122,10 @@ RPC/ClientSettings.h:
 
 /usr/include/homegear-base/Output/Output.h:
 
+/usr/include/homegear-base/Licensing/LicensingFactory.h:
+
+/usr/include/homegear-base/Licensing/Licensing.h:
+
 /usr/include/homegear-base/SSDP/SSDP.h:
 
 /usr/include/homegear-base/Encoding/HTTP.h:
@@ -1176,6 +1183,8 @@ RPC/../GD/../Events/../RPC/Webserver.h:
 RPC/../GD/../Events/../RPC/RPCMethods.h:
 
 RPC/../GD/../Events/../RPC/../Events/EventHandler.h:
+
+RPC/../GD/../Licensing/LicensingController.h:
 
 RPC/../GD/../Systems/FamilyController.h:
 
