--- a/src/RPC/.deps/Server.Po
+++ b/src/RPC/.deps/Server.Po
@@ -273,6 +273,7 @@ RPC/Server.o: RPC/Server.cpp /usr/include/stdc-predef.h RPC/Server.h \
  /usr/include/homegear-base/DeviceDescription/Scenario.h \
  /usr/include/c++/4.8/set /usr/include/c++/4.8/bits/stl_set.h \
  /usr/include/c++/4.8/bits/stl_multiset.h \
+ /usr/include/homegear-base/IEvents.h \
  /usr/include/homegear-base/Settings/Settings.h \
  /usr/include/homegear-base/Sockets/HTTPClient.h \
  /usr/include/homegear-base/Sockets/SocketOperations.h \
@@ -305,6 +306,7 @@ RPC/Server.o: RPC/Server.cpp /usr/include/stdc-predef.h RPC/Server.h \
  /usr/include/homegear-base/Systems/ServiceMessages.h \
  /usr/include/homegear-base/Encoding/BinaryEncoder.h \
  /usr/include/homegear-base/Encoding/BinaryDecoder.h \
+ /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Peer.h \
  /usr/include/homegear-base/Systems/SystemFactory.h \
  /usr/include/homegear-base/Systems/DeviceFamily.h \
@@ -1026,6 +1028,8 @@ RPC/Server.h:
 
 /usr/include/c++/4.8/bits/stl_multiset.h:
 
+/usr/include/homegear-base/IEvents.h:
+
 /usr/include/homegear-base/Settings/Settings.h:
 
 /usr/include/homegear-base/Sockets/HTTPClient.h:
@@ -1099,6 +1103,8 @@ RPC/Server.h:
 /usr/include/homegear-base/Encoding/BinaryEncoder.h:
 
 /usr/include/homegear-base/Encoding/BinaryDecoder.h:
+
+/usr/include/homegear-base/DeviceDescription/Devices.h:
 
 /usr/include/homegear-base/Systems/Peer.h:
 
