--- a/src/UPnP/.deps/UPnP.Po
+++ b/src/UPnP/.deps/UPnP.Po
@@ -276,6 +276,7 @@ UPnP/UPnP.o: UPnP/UPnP.cpp /usr/include/stdc-predef.h UPnP/UPnP.h \
  /usr/include/homegear-base/DeviceDescription/Scenario.h \
  /usr/include/c++/4.8/set /usr/include/c++/4.8/bits/stl_set.h \
  /usr/include/c++/4.8/bits/stl_multiset.h \
+ /usr/include/homegear-base/IEvents.h \
  /usr/include/homegear-base/Settings/Settings.h \
  /usr/include/homegear-base/Sockets/HTTPClient.h \
  /usr/include/homegear-base/Sockets/SocketOperations.h \
@@ -308,6 +309,7 @@ UPnP/UPnP.o: UPnP/UPnP.cpp /usr/include/stdc-predef.h UPnP/UPnP.h \
  /usr/include/homegear-base/Systems/ServiceMessages.h \
  /usr/include/homegear-base/Encoding/BinaryEncoder.h \
  /usr/include/homegear-base/Encoding/BinaryDecoder.h \
+ /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Peer.h \
  /usr/include/homegear-base/Systems/SystemFactory.h \
  /usr/include/homegear-base/Systems/DeviceFamily.h \
@@ -1034,6 +1036,8 @@ UPnP/UPnP.h:
 
 /usr/include/c++/4.8/bits/stl_multiset.h:
 
+/usr/include/homegear-base/IEvents.h:
+
 /usr/include/homegear-base/Settings/Settings.h:
 
 /usr/include/homegear-base/Sockets/HTTPClient.h:
@@ -1107,6 +1111,8 @@ UPnP/UPnP.h:
 /usr/include/homegear-base/Encoding/BinaryEncoder.h:
 
 /usr/include/homegear-base/Encoding/BinaryDecoder.h:
+
+/usr/include/homegear-base/DeviceDescription/Devices.h:
 
 /usr/include/homegear-base/Systems/Peer.h:
 
