--- a/src/CLI/.deps/CLIClient.Po
+++ b/src/CLI/.deps/CLIClient.Po
@@ -276,6 +276,7 @@ CLI/CLIClient.o: CLI/CLIClient.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/DeviceDescription/Scenario.h \
  /usr/include/c++/4.8/set /usr/include/c++/4.8/bits/stl_set.h \
  /usr/include/c++/4.8/bits/stl_multiset.h \
+ /usr/include/homegear-base/IEvents.h \
  /usr/include/homegear-base/Settings/Settings.h \
  /usr/include/homegear-base/Sockets/HTTPClient.h \
  /usr/include/homegear-base/Sockets/SocketOperations.h \
@@ -308,6 +309,7 @@ CLI/CLIClient.o: CLI/CLIClient.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/Systems/ServiceMessages.h \
  /usr/include/homegear-base/Encoding/BinaryEncoder.h \
  /usr/include/homegear-base/Encoding/BinaryDecoder.h \
+ /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Peer.h \
  /usr/include/homegear-base/Systems/SystemFactory.h \
  /usr/include/homegear-base/Systems/DeviceFamily.h \
@@ -1036,6 +1038,8 @@ CLI/CLIClient.h:
 
 /usr/include/c++/4.8/bits/stl_multiset.h:
 
+/usr/include/homegear-base/IEvents.h:
+
 /usr/include/homegear-base/Settings/Settings.h:
 
 /usr/include/homegear-base/Sockets/HTTPClient.h:
@@ -1109,6 +1113,8 @@ CLI/CLIClient.h:
 /usr/include/homegear-base/Encoding/BinaryEncoder.h:
 
 /usr/include/homegear-base/Encoding/BinaryDecoder.h:
+
+/usr/include/homegear-base/DeviceDescription/Devices.h:
 
 /usr/include/homegear-base/Systems/Peer.h:
 
