--- a/src/Systems/.deps/DatabaseController.Po
+++ b/src/Systems/.deps/DatabaseController.Po
@@ -284,6 +284,7 @@ Systems/DatabaseController.o: Systems/DatabaseController.cpp \
  /usr/include/homegear-base/DeviceDescription/Scenario.h \
  /usr/include/c++/4.8/set /usr/include/c++/4.8/bits/stl_set.h \
  /usr/include/c++/4.8/bits/stl_multiset.h \
+ /usr/include/homegear-base/IEvents.h \
  /usr/include/homegear-base/Settings/Settings.h \
  /usr/include/homegear-base/Sockets/HTTPClient.h \
  /usr/include/homegear-base/Sockets/SocketOperations.h \
@@ -315,6 +316,7 @@ Systems/DatabaseController.o: Systems/DatabaseController.cpp \
  /usr/include/homegear-base/Systems/ServiceMessages.h \
  /usr/include/homegear-base/Encoding/BinaryEncoder.h \
  /usr/include/homegear-base/Encoding/BinaryDecoder.h \
+ /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Peer.h \
  /usr/include/homegear-base/Systems/SystemFactory.h \
  /usr/include/homegear-base/Systems/DeviceFamily.h \
@@ -1057,6 +1059,8 @@ Systems/../GD/../ScriptEngine/php_config_fixes.h:
 
 /usr/include/c++/4.8/bits/stl_multiset.h:
 
+/usr/include/homegear-base/IEvents.h:
+
 /usr/include/homegear-base/Settings/Settings.h:
 
 /usr/include/homegear-base/Sockets/HTTPClient.h:
@@ -1128,6 +1132,8 @@ Systems/../GD/../ScriptEngine/php_config_fixes.h:
 /usr/include/homegear-base/Encoding/BinaryEncoder.h:
 
 /usr/include/homegear-base/Encoding/BinaryDecoder.h:
+
+/usr/include/homegear-base/DeviceDescription/Devices.h:
 
 /usr/include/homegear-base/Systems/Peer.h:
 
