--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,18 @@
+18.07.2016:
+
+Features:
+
+* Sonos: Improved PLAY_AUDIO_FILE and PLAY_TTS
+	* The following title in playlist does not wrongly start to play anymore
+	* Volume is set on grouped speakers now, too
+
 17.07.2016:
 
 Features:
 
 * Added RPC method "ping" and "pong" event
+* Sonos: Ivona TTS access and secret key are now settable from config file
+* Family settings can now be fetched and saved from PHP (Homegear::getFamilySettings and Homegear::setFamilySettings)
 
 14.07.2016
 
