--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+27.07.2016:
+
+* Changes to MQTT to support three different payload types (plain, JSON array and JSON object) for values (see doc).
+
 26.07.2016:
 
 * Added option "-l" and CLI command "lifetick"
