Changes for EnOcean support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+13.09.2016:
+
+Features:
+
+* EnOcean module
+
+11.09.2016:
+
+Features:
+
+* Improvements to SerialReaderWriter
+
 16.08.2016:
 
 Features:
