Added Intertechno to Docker image creation script

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+11.10.2016:
+
+Features:
+
+* New family: Intertechno
+
+10.10.2016:
+
+Fixed Errors:
+
+* Links in HomeMatic Configurator not working.
+
 09.10.2016:
 
 Features:
