Improved PHP script stability

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+13.10.2016:
+
+Fixed errors:
+
+* Improved PHP script stability.
+
+Features:
+
+* Intertechno: Support for V3 remotes.
+
 11.10.2016:
 
 Features:
