Remoted call of newDevices on RPC event servers

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+17.10.2016:
+
+* Intertechno: Support for old Intertechno remotes.
+
+16.10.2016:
+
+* Intertechno: Support for Elro remotes.
+
 14.10.2016:
 
 Fixed errors:
