--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ Fixed erors:
 
 * getLinks() didn't return direct device links created with old Homegear versions.
 
+Enhancements:
+
+* Make lock file path configurable.
+
 17.10.2016:
 
 Changes:
