--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+10.11.2016:
+
+Enhandements:
+
+* Temporary files of families are not deleted by Homegear on start up. They are managed by the device families now.
+* Sonos: Time after which temporary files are deleted is configurable now.
+
 9.11.2016:
 
 Enhancements:
